--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
   "homepage": "https://codesandbox.io/s/new",
   "main": "src/index.js",
   "dependencies": {
+    "bootstrap": "^4.0.0",
+    "moment": "^2.22.0",
     "ramda": "0.25.0",
-    "react": "16.2.0",
-    "react-dom": "16.2.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "react-scripts": "1.1.0",
+    "reactstrap": "^5.0.0-beta.3",
     "recharts": "1.0.0-beta.10"
   },
   "devDependencies": {},
