--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.0",
+    "react-table": "6.8.0",
     "reactstrap": "^5.0.0-beta.3",
     "recharts": "1.0.0-beta.10"
   },
